Final commit With Feedback

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
         </ul>
       </nav>
       <div class="header-image">
-        <img src="/assets/app_install.png" alt="Banner showcasing GUVI platform" />
+        <img src="./assets/app_install.png" alt="Banner showcasing GUVI platform" />
       </div>
     </div>
   </header>
@@ -708,16 +708,16 @@
       <h2 class="section-title">We are accredited by</h2>
       <div class="grid">
         <div class="grid-item">
-          <img src="/assets/acc1.png" alt="Image 1">
+          <img src="./assets/acc1.png" alt="Image 1">
         </div>
         <div class="grid-item">
-          <img src="/assets/acc2.png" alt="Image 2">
+          <img src="./assets/acc2.png" alt="Image 2">
         </div>
         <div class="grid-item">
-          <img src="/assets/acc3.png" alt="Image 3">
+          <img src="./assets/acc3.png" alt="Image 3">
         </div>
         <div class="grid-item">
-          <img src="/assets/acc4.png" alt="Image 3">
+          <img src="./assets/acc4.png" alt="Image 3">
         </div>
       </div>
 
@@ -740,7 +740,7 @@
             <a href="#courses" class="btn">Explore Courses</a>
           </div>
           <div class="hero-image">
-            <img src="/assets/thumbsup.png" alt="GUVI Learning Platform" style="max-width: 100%;">
+            <img src="./assets/thumbsup.png" alt="GUVI Learning Platform" style="max-width: 100%;">
           </div>
         </div>
       </div>
@@ -801,7 +801,7 @@
           </div>
         </div>
         <div class="laptop-guy">
-          <img src="/assets/laptop.png" alt="Person with Laptop">
+          <img src="./assets/laptop.png" alt="Person with Laptop">
         </div>
       </div>
     </section>
@@ -813,7 +813,7 @@
         <p>Explore 175+ Premium Courses with New Course Additions every Month.</p>
         <div class="grid">
           <div class="card">
-            <img src="/assets/python.png" alt="Python Course">
+            <img src="./python.png" alt="Python Course">
             <div class="card-content">
               <h3>Python - IITM Pravartak Certified</h3>
               <p>Master Python programming</p>
@@ -821,7 +821,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/assets/java.png" alt="Java Course">
+            <img src="./assets/java.png" alt="Java Course">
             <div class="card-content">
               <h3>Java Programming</h3>
               <p>Become a Java expert</p>
@@ -829,7 +829,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/assets/sql.png" alt="AWS Course">
+            <img src="./assets/sql.png" alt="AWS Course">
             <div class="card-content">
               <h3>AWS Certification</h3>
               <p>Cloud computing mastery</p>
@@ -837,7 +837,7 @@
             </div>
           </div>
           <div class="card">
-            <img src="/assets/redis.png" alt="Redis Course">
+            <img src="./assets/redis.png" alt="Redis Course">
             <div class="card-content">
               <h3>Redis Certification</h3>
               <p>Redis mastery</p>
@@ -912,7 +912,7 @@
           <button class="explore-button">Explore More Programs</button>
         </div>
         <div class="image-section">
-          <img src="/assets/woman.png" alt="Woman with tech icons">
+          <img src="./assets/woman.png" alt="Woman with tech icons">
         </div>
       </div>
     </section>
@@ -950,13 +950,13 @@
     <section class="learners-work-section">
       <h2>Our Learners Work at</h2>
       <div class="company-logos">
-        <img src="/assets/flipkart.png" alt="Flipkart" class="company-logo">
-        <img src="/assets/freshworks.png" alt="Freshworks" class="company-logo">
-        <img src="/assets/juspay.png" alt="JUSPAY" class="company-logo">
-        <img src="/assets/chargebee.png" alt="Chargebee" class="company-logo">
-        <img src="/assets/zoho.png" alt="Zoho" class="company-logo">
-        <img src="/assets/paypal.png" alt="PayPal" class="company-logo">
-        <img src="/assets/amazon.png" alt="Amazon" class="company-logo">
+        <img src="./assets/flipkart.png" alt="Flipkart" class="company-logo">
+        <img src="./assets/freshworks.png" alt="Freshworks" class="company-logo">
+        <img src="./assets/juspay.png" alt="JUSPAY" class="company-logo">
+        <img src="./assets/chargebee.png" alt="Chargebee" class="company-logo">
+        <img src="./assets/zoho.png" alt="Zoho" class="company-logo">
+        <img src="./assets/paypal.png" alt="PayPal" class="company-logo">
+        <img src="./assets/amazon.png" alt="Amazon" class="company-logo">
       </div>
     </section>
 
@@ -1268,9 +1268,9 @@
         <div class="testimonial-container">
           <div class="testimonial-content">
             <div class="user-images">
-              <img src="/assets/person1.png" alt="User 1" class="user-img">
-              <img src="/assets/person2.png" alt="User 2" class="user-img">
-              <img src="/assets/person3.png" alt="User 3" class="user-img">
+              <img src="./assets/person1.png" alt="User 1" class="user-img">
+              <img src="./assets/person2.png" alt="User 2" class="user-img">
+              <img src="./assets/person3.png" alt="User 3" class="user-img">
             </div>
             <div class="testimonial-box">
               <blockquote>
@@ -1303,7 +1303,7 @@
               <span class="star">&#9733;</span>
               <span class="star">&#9734;</span>
             </div>
-            <img src="/assets/google.png" alt="Google" class="google-logo">
+            <img src="./assets/google.png" alt="Google" class="google-logo">
             <p>Reviews</p>
           </div>
         </div>
@@ -1569,7 +1569,7 @@
         </div>
         <div class="footer-bottom">
           <div class="footer-logo">
-            <img src="/assets/guvi.png" alt="GUVI">
+            <img src="./assets/guvi.png" alt="GUVI">
             <p>GUVI is an IIT-M & IIM-A incubated Ed-tech company that focuses on providing personalized learning
               solutions for its learners right from online learning, upskilling & recruitment opportunities in
               world-class quality. And, bestow tech-skills with the comfort of your native language.</p>
@@ -1588,7 +1588,7 @@
           <div class="footer-buttons">
             <a href="#" class="btn btn-outline">Refer & Earn</a>
             <a href="#" class="btn btn-google-play">
-              <img src="/assets/guvi.png" alt="Get it on Google Play">
+              <img src="./assets/guvi.png" alt="Get it on Google Play">
             </a>
           </div>
         </div>
