--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GUVI - Learn to code in your native language</title>
+  <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
   <style>
     :root {
       --primary-color: #0dba4b;
