Asset Path Correction

--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
         <p>Explore 175+ Premium Courses with New Course Additions every Month.</p>
         <div class="grid">
           <div class="card">
-            <img src="./python.png" alt="Python Course">
+            <img src="./assets/python.png" alt="Python Course">
             <div class="card-content">
               <h3>Python - IITM Pravartak Certified</h3>
               <p>Master Python programming</p>
